test/files/neg/t4174.check
t4174.scala:7: error: method bar overrides nothing
    foo(new C { override def bar = 1 })
                             ^
one error found
